cf-list-button aligned to design fix: userresponse

--- a/src/styles/cf/ui/chat/cf-chat-response.styl
+++ b/src/styles/cf/ui/chat/cf-chat-response.styl
@@ -38,12 +38,11 @@ cf-chat-response
 				opacity 1
 				transition-delay 0s, 0s, 0s
 
-	
 	text
 		user-select none
 		display block
 		position relative
-		padding 12px 12px 12px 24px
+		padding 12px 24px 12px 24px
 		min-height 40px
 		background $color-chat-reponse-default-bg
 		border-radius 0px 20px 20px 20px
